<?xml version="1.0" encoding="utf-8"?>
<resources>
   <!-- To future developers- updating the app is simple. Simply replace the names/ranks in the strings below
            To the new values for your year. Then GIT commit to your year IE my year was 2014-2015, the year
            after would be 2015-2016 and so on and so forth ~Rudi -->
    <string name="app_name">JROTC</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about_program">About the Program</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_brigade_info">Brigade Info</string>
    <string name="title_activity_current_information">Current Information</string>
    <string name="title_activity_brigade">Brigade</string>
    <string name="title_activity_first_batallion">First Battalion</string>
    <string name="title_activity_second_batallion">Second Battalion</string>
    <string name="action_settings">No Errors</string>
    <string name="front_message"> Congratulations to Brigade Commander Donald Vivian!</string>
    <string name="front_date">Message Updated 5/23/14</string>
    <string name="brigade_commander">Brigade Commander - C/COL Donald Vivian</string>
    <string name="brigade_xo">Brigade Executive Officer - C/LTC Justin Decker</string>
    <string name="brigade_s1">Brigade S-1 - C/MAJ Dustin Scaringe</string>
    <string name="brigade_assist_s1">Brigade Assistant S-1 - C/CPT Dave Unser</string>
    <string name="brigade_s3">Brigade S-3 C/LTC John Graham</string>
    <string name="brigade_s4">Brigade S-4 - C/MAJ Seth Cline</string>
    <string name="brigade_s2_s5">Brigade S-2/S-5 - C/CPT Matt Mahigian</string>
    <string name="brigade_assist_s2_s5">Brigade Assistant S-2/S-5 C/MSG Gregory Rudolph</string>
    <string name="brigade_csm">Brigade Command Sergeant Major - C/CSM James Avery</string>
    <string name="brigade_chaplain">Brigade Chaplain - C/CPT Ben Anthony</string>
    <string name="brigade_chaplain2">Brigade Chaplain - C/CPT Matt Hamel</string>
    <string name="brigade_pro">Brigade Public Relations Officer C/CPT Lorenzo Horvath</string>
    <string name="b1_bcommand">Battalion Commander- C/LTC Nick O\'Brien</string>
    <string name="b1_xo">Battalion Executive Officer- C/MAJ Tom Stanton</string>
    <string name="b1_bcsm">Battalion Command Sergeant Major- C/CSM Sean Connolly</string>
    <string name="b1_s1">Battalion S-1- C/CPT Matt Sawicki</string>
    <string name="b1_s4">Battalion S-4- C/CPT Alex Remy</string>
    <string name="ac_cco">Cadet Captain Dan O\'Conner</string>
    <string name="ac_1sg">Mike Saccocio</string>
    <string name="a1_plat">Cadet 2nd Lt. Harvey Robinson</string>
    <string name="a1_plat_sgt">Cadet Sgt. 1st Class Trinni Gill</string>
    <string name="a2_plat">Cadet 2nd Lt. Mike Crisifulli</string>
    <string name="a2_plat_sgt">Cadet Sgt. 1st Class Austin Kopp</string>
    <string name="a3_plat">Cadet 2nd Lt. Josh Wynn</string>
    <string name="a3_plat_sgt">Cadet Sgt. 1st Class Nasir Tune</string>
    <string name="bc_cco">Cadet Captain James O\'Neill</string>
    <string name="bc_1sg">Dave Force</string>
    <string name="b1_plat">Cadet 2nd Lt. Mike Leffler</string>
    <string name="b1_plat_sgt">Cadet Sgt. 1st Class Mitchell Spencer</string>
    <string name="b2_plat">Cadet 2nd Lt. Jay McIntyre</string>
    <string name="b2_plat_sgt">Cadet Sgt. 1st Class Dan Rotchford</string>
    <string name="b3_plat">Cadet 2nd Lt. Austin Ellis</string>
    <string name="b3_plat_sgt">Cadet sgt. 1st Class Jason Vrolijk</string>
    <string name="b2_bcommand">Battalion Commander- C/LTC Liam O\'Brien</string>
    <string name="b2_xo">Battalion Executive Officer- C/MAJ C/MAJ Pat Pastore</string>
    <string name="b2_bcsm">Battalion Command Sergeant Major- C/CSM Austin Thomas</string>
    <string name="b2_s1">Battalion S-1- C/CPT Justin Dickenson</string>
    <string name="b2_s4">Battalion S-4- C/CPT Connor Farley</string>
    <string name="cc_cco">Cadet Captian Jack Ladd</string>
    <string name="cc_1sg">Tim O\'Connell</string>
    <string name="c1_plat">Cadet 2nd Lt. Ian Leffler</string>
    <string name="c1_plat_sgt">Cadet Sgt. 1st Class Noah Frese</string>
    <string name="c2_plat">Cadet 2nd Lt. Brian Monroe</string>
    <string name="c2_plat_sgt">Cadet Sgt. 1st Class Ian Cronin</string>
    <string name="c3_plat">Cadet 2nd Lt. Ryan Spencer</string>
    <string name="c3_plat_sgt">Cadet Sgt. 1st Class Andre Grady</string>
    <string name="dc_cco">Cadet Captain Mike Strohmaier</string>
    <string name="dc_1sg">Evan Plante</string>
    <string name="d1_plat">Cadet 2nd Lt. J.J. Smith</string>
    <string name="d1_plat_sgt">Cadet Sgt. 1st Class Purner</string>
    <string name="d2_plat">Cadet 2nd Lt. Sal Fuda</string>
    <string name="d2_plat_sgt">Cadet Sgt. 1st Class Jakil Paul</string>
    <string name="d3_plat">Cadet 2nd Lt. Mike Buyaskas</string>
    <string name="d3_plat_sgt">Cadet Sgt. 1st Class Joe Stiglmeier</string>
    <string name="band_cdr">Band Commander - Kaushik Pilar</string>
    <string name="drum_major">Drum Major - Johnny Woods</string>
    <string name="band_sm">Band Sargent Major - Tom D\'Angelo</string>
    <string name="band_1_pl">First Platoon Leader - Matt Seeley</string>
    <string name="band_1_psg">First Platoon Sargent - Ben Gochee</string>
    <string name="band_2_pl">Second Platoon Leader - Matt Baddalucco</string>
    <string name="band_2_psg">Second Platoon Sargent - Will Byron</string>
    <string name="band_3_pl">Third Platoon Leader - Diamond Corker</string>
    <string name="band_3_psg">Third Platoon Sargent - Dan Philbin</string>
    <string name="title_activity_a_company">A Company</string>
    <string name="title_activity_b_company">B Company</string>
    <string name="title_activity_aco_fst_p">A Company, First Platoon</string>
    <string name="title_activity_aco_snd_p">A Company, Second Platoon</string>
    <string name="title_activity_bco_fst">B Company, First Platoon</string>
    <string name="title_activity_bco_snd">B Company, Second Platoon</string>
    <string name="title_activity_bco_trd">B Company, Third Platoon</string>
    <string name="title_activity_c_company">C Company</string>
    <string name="title_activity_d_company">D Company</string>
    <string name="title_activity_cco_fst">C Company, First Platoon</string>
    <string name="title_activity_cco_snd">C Company, Second Platoon</string>
    <string name="title_activity_cco_trd">C Company, Third Platoon</string>
    <string name="title_activity_dco_fst">D Company, First Platoon</string>
    <string name="title_activity_dco_snd">D Company, Second Platoon</string>
    <string name="title_activity_dco_trd">D Company, Third Platoon</string>
    <string name="title_activity_aco_trd">A Company, Third Platoon</string>
    <string name="title_activity_about_developers">About the Developers</string>
    <string name="title_activity_band_info">Band Info</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">JROTC</string>
    <string name="title_activity_picture_viewer">JROTC Pictures</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_gallery">Photo Gallery!</string>
    <string name="drill14">2014 Drill Team</string>
    <string name="memparade14">2014 Memorial Day Parade</string>
    <string name="mothersreview14">2014 Mothers Day Review</string>
    <string name="oc14">2014 Officer Commissioning</string>
    <string name="springconcert14">2014 Spring Concert</string>
    <string name="title_activity_drill14">2014 Drill Team</string>

</resources>
